c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/extra_credit/compound_sub_pointer_from_int.c
// += and -= operators: RHS must not be a pointer regardless of LHS type
int main(void) {
    int arr[3] = {1, 2, 3};
    int *elem = arr + 1;
    int i = 0;
    i -= elem;
    return 0;
}